consistently use default label if not renamed

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "yarn compose:new && yarn serve",
     "build": "yarn makecert && quasar build",
     "devbuild": "rm -r dev/dist/*; yarn build && cp -r dist/* dev/dist/",
+    "devtools": "vue-devtools",
     "test": "yarn test:unit",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
     "lint:fix": "yarn lint --fix",
@@ -68,13 +69,13 @@
     "@types/jest": "^27.0.2",
     "@types/js-quantities": "^1.6.2",
     "@types/lodash": "^4.14.172",
-    "@types/marked": "^3.0.1",
+    "@types/marked": "^4.0.1",
     "@types/node": "16.10.2",
     "@types/plotly.js": "^1.54.14",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
-    "@vue/devtools": "^6.0.0-beta.15",
+    "@vue/devtools": "^6.0.0-beta.21",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.12",
     "babel-jest": "^27.2.4",
