Abs boil point setting; qty min PID output if offset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,7 @@
   "volar.autoCompleteRefs": false,
   "volar.codeLens.scriptSetupTools": false,
   "volar.codeLens.pugTools": false,
-  "volar.checkVueTscVersion": true,
-  "volar.takeOverBuiltinTsExtension": true,
+  "volar.takeOverMode.enabled": true,
   "eslint.run": "onType",
   "html.autoClosingTags": true,
   "[vue]": {
@@ -19,5 +18,13 @@
   "jest.autoRun": {
     "watch": false,
     "onSave": "test-file"
+  },
+  "files.watcherExclude": {
+    "dev/node-red/**": true,
+    "dev/redis/**": true,
+    "dev/simulator__*/**": true,
+    "dev/tilt_share/**": true,
+    "dev/traefik/brewblox.*": true,
+    "dev/victoria/**": true
   }
 }
