--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@vue/test-utils": "^2.0.0-rc.12",
     "babel-jest": "^27.2.4",
     "babel-plugin-transform-imports": "^2.0.0",
-    "eslint": "^8.12.0",
+    "eslint": "~7",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
