use updated volar

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
   "recommendations": [
-    "johnsoncodehk.volar",
+    "Vue.volar",
     "editorconfig.editorconfig",
     "syler.sass-indented",
     "orta.vscode-jest",
