--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
   "volar.autoCompleteRefs": false,
   "volar.codeLens.scriptSetupTools": false,
   "volar.codeLens.pugTools": false,
-  "volar.takeOverMode.enabled": true,
+  "volar.takeOverMode.enabled": false,
+  "volar.vueserver.useSecondServer": true,
   "eslint.run": "onType",
   "html.autoClosingTags": true,
   "[vue]": {
