--- a/package.json
+++ b/package.json
@@ -36,9 +36,15 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
+    "@codemirror/theme-one-dark": "^6.0.0",
     "@quasar/extras": "^1.10.11",
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
+    "cm6-theme-basic-dark": "^0.2.0",
+    "cm6-theme-gruvbox-dark": "^0.2.0",
+    "cm6-theme-material-dark": "^0.2.0",
+    "cm6-theme-solarized-dark": "^0.2.0",
+    "codemirror": "^6.0.0",
     "core-js": "^3.16.3",
     "d3": "^7.0.3",
     "date-fns": "^2.23.0",
