--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "ci": "rm -rf node_modules; yarn install --frozen-lockfile",
     "makecert": "bash dev/makecert.sh",
+    "initdev": "bash dev/initdev.sh",
     "redis:load": "node dev/redis_load.js",
     "redis:save": "node dev/redis_save.js",
     "redis": "yarn redis:load",
@@ -15,11 +16,10 @@
     "spark:load": "node dev/spark_load.js",
     "spark": "yarn spark:load",
     "compose:setup": "yarn redis && yarn spark",
-    "compose:new": "yarn makecert && docker-compose up -d --force-recreate && yarn compose:setup",
-    "serve": "quasar dev",
+    "compose:new": "yarn initdev && yarn makecert && docker-compose up -d --force-recreate && yarn compose:setup",
+    "serve": "vite serve",
     "start": "yarn compose:new && yarn serve",
-    "build": "yarn makecert && quasar build",
-    "devbuild": "rm -r dev/dist/*; yarn build && cp -r dist/* dev/dist/",
+    "build": "yarn makecert && vite build",
     "devtools": "vue-devtools",
     "test": "yarn test:unit",
     "lint:eslint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
@@ -45,7 +45,7 @@
     "d3": "^7.0.3",
     "date-fns": "^2.23.0",
     "dompurify": "^2.3.1",
-    "elkjs": "^0.7.1",
+    "elkjs": "^0.8.1",
     "fromentries": "^1.3.2",
     "js-quantities": "^1.7.6",
     "lodash": "^4.17.21",
@@ -69,10 +69,10 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@quasar/app": "^3.1.0",
+    "@quasar/vite-plugin": "^1.0.10",
+    "@rollup/plugin-inject": "^4.0.4",
     "@types/d3": "^7.0.0",
     "@types/dompurify": "^2.2.3",
     "@types/jest": "^27.0.2",
@@ -81,14 +81,12 @@
     "@types/marked": "^4.0.1",
     "@types/node": "^17.0.23",
     "@types/plotly.js": "^1.54.14",
-    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "@vitejs/plugin-vue": "^2.3.3",
     "@vue/devtools": "^6.0.0-beta.21",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.12",
-    "babel-jest": "^27.2.4",
-    "babel-plugin-transform-imports": "^2.0.0",
     "eslint": "~7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.24.2",
@@ -96,21 +94,22 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-vue": "^8.5.0",
-    "eslint-webpack-plugin": "^3.0.1",
     "fibers": "^5.0.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.1",
     "jest": "^27.2.4",
     "minimist": "^1.2.5",
     "node-sass": "^7.0.0",
     "prettier": "^2.3.2",
-    "sass-loader": "^12.1.0",
+    "rollup": "^2.75.7",
+    "sass": "1.32.0",
     "svgpath": "^2.3.1",
     "ts-jest": "^27.0.5",
     "tsutils": "^3.20.0",
     "typescript": "~4.4.0",
-    "vue-jest": "^5.0.0-alpha.10",
+    "vite": "^2.9.13",
+    "vite-plugin-linter": "^1.2.0",
+    "vite-tsconfig-paths": "^3.5.0",
     "vue-template-compiler": "^2.6.14",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "vue-tsc": "^0.38.2"
   },
   "engines": {
     "node": ">= 14",
