replace jest with vitest

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,5 +30,22 @@
         "webpack:///./src/*": "${webRoot}/*"
       }
     },
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "Debug Current Test File",
+      "autoAttachChildProcesses": true,
+      "skipFiles": [
+        "<node_internals>/**",
+        "**/node_modules/**"
+      ],
+      "program": "${workspaceRoot}/node_modules/vitest/vitest.mjs",
+      "args": [
+        "run",
+        "${relativeFile}"
+      ],
+      "smartStep": true,
+      "console": "integratedTerminal"
+    },
   ]
 }
