--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 .DS_Store
 .thumbs.db
 node_modules
-/dist
-/devdist
 
 npm-debug.log*
 yarn-debug.log*
@@ -18,16 +16,11 @@ yarn-error.log*
 *.njsproj
 *.sln
 
-# Files and subdirectories in dev/ have to be whitelisted
-.env
-dev/*/
-dev/.env
-!dev/*.js
-!dev/*.sh
-!dev/*.ts
+# Build output
+/dist
 
-!dev/presets
-
-!dev/traefik
-dev/traefik/brewblox.crt
-dev/traefik/brewblox.key
+# Dev environment files
+/.env
+/dev/.env
+/dev/traefik/brewblox.crt
+/dev/traefik/brewblox.key
