--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "@rollup/plugin-inject": "^4.0.4",
     "@types/d3": "^7.0.0",
     "@types/dompurify": "^2.2.3",
-    "@types/jest": "^27.0.2",
     "@types/js-quantities": "^1.6.2",
     "@types/lodash": "^4.14.172",
     "@types/marked": "^4.0.1",
@@ -84,9 +83,8 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/devtools": "^6.0.0-beta.21",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "@vue/test-utils": "^2.0.0-rc.12",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "eslint": "~7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.24.2",
@@ -95,21 +93,15 @@
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "fibers": "^5.0.0",
-    "jest": "^27.2.4",
+    "jsdom": "^20.0.0",
     "minimist": "^1.2.5",
-    "node-sass": "^7.0.0",
     "prettier": "^2.3.2",
     "rollup": "^2.75.7",
     "sass": "1.32.0",
     "svgpath": "^2.3.1",
-    "ts-jest": "^27.0.5",
-    "tsutils": "^3.20.0",
     "typescript": "~4.4.0",
     "vite": "^2.9.13",
-    "vite-plugin-linter": "^1.2.0",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.38.2"
+    "vitest": "^0.17.0"
   },
   "engines": {
     "node": ">= 14",
