--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "compose:new": "yarn initdev && yarn makecert && docker-compose up -d --force-recreate && yarn compose:setup",
     "serve": "vite serve",
     "start": "yarn compose:new && yarn serve",
-    "build": "yarn makecert && vite build",
-    "devtools": "vue-devtools",
+    "build": "vite build",
     "test": "vitest",
     "test:ci": "vitest --run --coverage",
     "lint:eslint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
