--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,8 @@ steps:
   - bash: |
       yarn build
     displayName: Build
+    env:
+      NODE_OPTIONS: --max_old_space_size=16384
 
   - bash: |
       yarn lint
