--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ variables:
 steps:
   - task: NodeTool@0
     inputs:
-      versionSpec: '14.x'
+      versionSpec: '16.x'
     displayName: 'Install Node.js'
 
   - bash: |
@@ -41,6 +41,7 @@ steps:
 
   - bash: |
       yarn build
+      du -h dist/
     displayName: Build
     env:
       NODE_OPTIONS: --max_old_space_size=16384
