Implement directory-based sidebar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,11 @@
     "lib": [
       "ESNext",
       "DOM",
-      "DOM.Iterable",
-      "ScriptHost"
+      "DOM.Iterable"
     ],
     "types": [
-      "quasar",
-      "vite/client"
+      "vite/client",
+      "quasar"
     ]
   },
   "include": [
