--- a/package.json
+++ b/package.json
@@ -74,10 +74,11 @@
     "@types/lodash": "^4.14.172",
     "@types/marked": "^4.0.1",
     "@types/node": "18.8.0",
-    "@types/plotly.js": "^1.54.14",
+    "@types/plotly.js": "^2.12.7",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@vitest/coverage-c8": "^0.24.3",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.7",
