--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "volar.codeLens.scriptSetupTools": false,
   "volar.codeLens.pugTools": false,
   "volar.takeOverMode.enabled": "auto",
+  "volar.codeLens.references": false,
   "eslint.run": "onType",
   "html.autoClosingTags": true,
   "[vue]": {
