--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "parse-duration": "^1.0.0",
     "pinia": "^2.0.0-rc.10",
     "plotly.js": "^2.4.1",
+    "pluralize": "^8.0.0",
     "portal-vue": "^3.0.0-beta.0",
     "process": "^0.11.10",
     "quasar": "^2.0.4",
@@ -76,6 +77,7 @@
     "@types/marked": "^4.0.1",
     "@types/node": "18.8.0",
     "@types/plotly.js": "^2.12.7",
+    "@types/pluralize": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-vue": "^3.1.2",
