--- a/package.json
+++ b/package.json
@@ -102,12 +102,12 @@
     "rollup": "^3.2.2",
     "sass": "1.32.0",
     "svgpath": "^2.3.1",
-    "typescript": "^4.8.4",
+    "typescript": "~4.8",
     "vite": "^3.1.8",
     "vite-plugin-checker": "^0.5.1",
     "vitest": "^0.24.3",
     "vue-global-type-gen": "^1.1.0",
-    "vue-tsc": "^1.0.8"
+    "vue-tsc": "^1.6.0"
   },
   "engines": {
     "node": ">= 14",
