--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^3.0.0",
     "rollup": "^3.2.2",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "1.32.0",
     "svgpath": "^2.3.1",
     "typescript": "~4.8",
