--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,33 +5,37 @@ services:
     image: ghcr.io/brewblox/mosquitto:develop
     labels:
       - traefik.http.services.eventbus.loadbalancer.server.port=15675
+      - traefik.http.routers.eventbus.middlewares=auth
 
   victoria:
     image: victoriametrics/victoria-metrics:v1.88.0
-    labels:
-      - traefik.http.services.victoria.loadbalancer.server.port=8428
-    volumes:
-      - type: bind
-        source: ${BREWBLOX_CACHE_DIR}/victoria
-        target: /victoria-metrics-data
     command: >-
       --retentionPeriod=100y
       --influxMeasurementFieldSeparator=/
       --http.pathPrefix=/victoria
       --search.latencyOffset=10s
+    labels:
+      - traefik.http.services.victoria.loadbalancer.server.port=8428
+      - traefik.http.routers.victoria.middlewares=auth
+    volumes:
+      - type: bind
+        source: ${BREWBLOX_CACHE_DIR}/victoria
+        target: /victoria-metrics-data
 
   redis:
     image: redis:6.0
+    command: --appendonly yes
     labels:
       - traefik.enable=false
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/redis
         target: /data
-    command: --appendonly yes
 
   history:
     image: ghcr.io/brewblox/brewblox-history:develop
+    labels:
+      - traefik.http.routers.history.middlewares=auth
 
   node-red:
     image: ghcr.io/brewblox/node-red:develop
@@ -42,23 +46,27 @@ services:
 
   sparkey:
     image: ghcr.io/brewblox/brewblox-devcon-spark:develop
+    command: --name=sparkey --simulation --device-id=123456789012345678901234
     restart: unless-stopped
     privileged: true
+    labels:
+      - traefik.http.routers.sparkey.middlewares=auth
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/simulator__sparkey
         target: /app/simulator
-    command: --name=sparkey --simulation --device-id=123456789012345678901234
 
   spock:
     image: ghcr.io/brewblox/brewblox-devcon-spark:develop
+    command: --name=spock --simulation --device-id=432109876543210987654321
     restart: unless-stopped
     privileged: true
+    labels:
+      - traefik.http.routers.spock.middlewares=auth
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/simulator__spock
         target: /app/simulator
-    command: --name=spock --simulation --device-id=432109876543210987654321
 
   tilt:
     image: ghcr.io/brewblox/brewblox-tilt:develop
@@ -72,6 +80,12 @@ services:
     network_mode: host
     privileged: true
     command: --mqtt-port=9001 --simulate=Pink
+
+  auth:
+    image: ghcr.io/brewblox/brewblox-auth:develop
+    labels:
+      - traefik.http.middlewares.auth.forwardauth.address=http://auth:5000/auth/verify
+      - traefik.http.middlewares.auth.forwardauth.authResponseHeaders=Authorization
 
   traefik:
     image: traefik:2.2
