Do not cache the html index file

--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -38,6 +38,13 @@ server {
     rewrite ^(.+)$ /ui/index.html last;
   }
 
+  # The index file itself is small, and should not be cached
+  # The JS/CSS chunks have hashed names to handle caching
+  location /ui/index.html {
+    expires 0;
+    add_header Cache-Control no-cache;
+  }
+
   # Basic cache-control for static files
   location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?)$ {
     sendfile on;
