convert scripts to mjs

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "ci": "rm -rf node_modules; yarn install --frozen-lockfile",
     "makecert": "bash dev/makecert.sh",
     "initdev": "bash dev/initdev.sh",
-    "redis:load": "node dev/redis_load.js",
-    "redis:save": "node dev/redis_save.js",
+    "redis:load": "node dev/redis_load.mjs",
+    "redis:save": "node dev/redis_save.mjs",
     "redis": "yarn redis:load",
-    "spark:save": "node dev/spark_save.js",
-    "spark:load": "node dev/spark_load.js",
+    "spark:save": "node dev/spark_save.mjs",
+    "spark:load": "node dev/spark_load.mjs",
     "spark": "yarn spark:load",
     "compose:setup": "yarn redis && yarn spark",
     "compose:new": "yarn initdev && yarn makecert && docker compose up -d --force-recreate && yarn compose:setup",
@@ -22,12 +22,12 @@
     "build": "vite build && du -h dist/",
     "test": "vitest",
     "test:ci": "vitest --run --coverage",
-    "lint:eslint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
-    "lint:prettier": "prettier --check ./src ./test ./dev/*.js ./*.js ./*.yml",
+    "lint:eslint": "eslint --ext .mjs,.js,.ts,.vue --ignore-path .gitignore ./src ./test",
+    "lint:prettier": "prettier --check ./src ./test ./dev/*.mjs ./*.js ./*.yml",
     "lint:tsc": "vue-tsc --noEmit",
     "lint": "yarn lint:tsc && yarn lint:eslint && yarn lint:prettier",
     "lint:fix:eslint": "yarn lint:eslint --fix",
-    "lint:fix:prettier": "prettier --write ./src ./test ./dev/*.js ./*.js ./*.yml",
+    "lint:fix:prettier": "prettier --write ./src ./test ./dev/*.mjs ./*.js ./*.yml",
     "lint:fix": "yarn lint:fix:eslint && yarn lint:fix:prettier",
     "firmware": "bash dev/update-firmware.sh",
     "components": "vue-global-type-gen && echo 'export {};' >> src/auto-import.d.ts"
