drastic no cache

--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -41,8 +41,9 @@ server {
   # The index file itself is small, and should not be cached
   # The JS/CSS chunks have hashed names to handle caching
   location /ui/index.html {
+    add_header Cache-Control "no-cache, no-store, must-revalidate, proxy-revalidate, max-age=0";
+    add_header Pragma no-cache;
     expires 0;
-    add_header Cache-Control no-cache;
   }
 
   # Basic cache-control for static files
