--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/js-quantities": "^1.6.2",
     "@types/lodash": "^4.14.172",
     "@types/marked": "^4.0.1",
+    "@types/minimist": "^1.2.2",
     "@types/node": "18.8.0",
     "@types/plotly.js": "^2.12.7",
     "@types/pluralize": "^0.0.29",
