--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: corepack enable
+      - run: |
+          corepack enable
+          yarn set version stable
+          yarn --version
       - run: yarn ci
       - run: yarn build
         env:
