--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           corepack enable
           yarn set version stable
           yarn --version
-      - run: yarn ci
+      - run: yarn install
       - run: yarn build
         env:
           NODE_OPTIONS: --max_old_space_size=16384
