--- a/package.json
+++ b/package.json
@@ -83,12 +83,11 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-vue": "^4.4.0",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "@vue/compiler-sfc": "^3.3.7",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.4.7",
-    "c8": "^8.0.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
