--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,6 @@ jobs:
           NODE_OPTIONS: --max_old_space_size=16384
       - run: yarn lint
       - run: yarn test:ci
-      - run: cp -rf dist/ docker/
 
       - name: Build Docker image
         uses: docker/build-push-action@v4
@@ -52,4 +51,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
-          context: docker
+          context: .
