--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,16 +3,17 @@
 # Some common configurations are added in comments below
 services:
   ui:
-    image: ghcr.io/brewblox/brewblox-ui:develop
+    build: .
     volumes:
       - type: bind
         source: ./dist
-        target: /usr/share/nginx/html/ui
+        target: /var/www/ui
       - type: bind
-        source: ./docker/conf/default.conf
-        target: /etc/nginx/conf.d/default.conf
+        source: ./dev/traefik/minica.pem
+        target: /var/www/static/minica.pem
+        read_only: true
     labels:
-      - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || Path(`/`)
+      - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || PathPrefix(`/static`) || Path(`/`)
 
   # node-red:
   #   volumes:
