--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,6 +12,10 @@ services:
         source: ./dev/traefik/minica.pem
         target: /var/www/static/minica.pem
         read_only: true
+      - type: bind
+        source: ./dev/traefik/minica.der
+        target: /var/www/static/minica.der
+        read_only: true
     labels:
       - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || PathPrefix(`/static`) || Path(`/`)
 
