--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,27 +2,6 @@
   "editor.formatOnSave": true,
   "eslint.run": "onType",
   "html.autoClosingTags": true,
-  "[vue]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[yaml]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[dockercompose]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "vue.codeActions.enabled": false,
-  "vue.codeLens.enabled": false,
-  "vue.inlayHints.inlineHandlerLeading": false,
-  "vue.inlayHints.missingProps": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "typescript.tsdk": "node_modules/typescript/lib"
 }
