--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "mqtt": "^5.1.4",
     "nanoid": "^5.0.2",
     "parse-duration": "^1.0.0",
-    "pinia": "^2.0.0-rc.10",
+    "pinia": "^2.1.7",
     "plotly.js": "^2.4.1",
     "portal-vue": "^3.0.0-beta.0",
     "process": "^0.11.10",
