use environment vars for dev compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,14 @@ services:
 
   victoria:
     image: victoriametrics/victoria-metrics:v1.88.0
-    command: >-
-      --retentionPeriod=100y
-      --influxMeasurementFieldSeparator=/
-      --http.pathPrefix=/victoria
-      --search.latencyOffset=10s
+    command: --envflag.enable=true --envflag.prefix=VM_
     labels:
       - traefik.http.services.victoria.loadbalancer.server.port=8428
+    environment:
+      - VM_retentionPeriod=100y
+      - VM_influxMeasurementFieldSeparator=/
+      - VM_http_pathPrefix=/victoria
+      - VM_search_latencyOffset=10s
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/victoria
@@ -41,9 +42,11 @@ services:
 
   sparkey:
     image: ghcr.io/brewblox/brewblox-devcon-spark:develop
-    command: --name=sparkey --simulation --device-id=123456789012345678901234
     restart: unless-stopped
     privileged: true
+    environment:
+      - BREWBLOX_SPARK_SIMULATION=true
+      - BREWBLOX_SPARK_DEVICE_ID=123456789012345678901234
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/simulator__sparkey
@@ -51,9 +54,11 @@ services:
 
   spock:
     image: ghcr.io/brewblox/brewblox-devcon-spark:develop
-    command: --name=spock --simulation --device-id=432109876543210987654321
     restart: unless-stopped
     privileged: true
+    environment:
+      - BREWBLOX_SPARK_SIMULATION=true
+      - BREWBLOX_SPARK_DEVICE_ID=432109876543210987654321
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/simulator__spock
@@ -61,22 +66,22 @@ services:
 
   tilt:
     image: ghcr.io/brewblox/brewblox-tilt:develop
+    restart: unless-stopped
+    privileged: true
     labels:
       - traefik.enable=false
+    environment:
+      - BREWBLOX_TILT_SIMULATE=Pink
     volumes:
       - type: bind
         source: ${BREWBLOX_CACHE_DIR}/tilt
         target: /share
-    restart: unless-stopped
-    network_mode: host
-    privileged: true
-    command: --mqtt-port=9001 --simulate=Pink
 
   auth:
     image: ghcr.io/brewblox/brewblox-auth:develop
     environment:
       - BREWBLOX_AUTH_ENABLED=False
-      - BREWBLOX_AUTH_IGNORE=/|/ui/.*|/static/.*
+      - BREWBLOX_AUTH_IGNORE=/|/(ui|static)/.*
     volumes:
       - type: bind
         source: ./dev/auth
@@ -97,6 +102,19 @@ services:
       - traefik.http.middlewares.cors.headers.accessControlAllowOriginListRegex=.*
       - traefik.http.middlewares.cors.headers.AccessControlAllowCredentials=true
       - traefik.http.middlewares.cors.headers.AccessControlAllowHeaders=Origin,X-Requested-With,Content-Type,Accept
+    environment:
+      - TRAEFIK_API_DASHBOARD=true
+      - TRAEFIK_PROVIDERS_DOCKER=true
+      - TRAEFIK_PROVIDERS_DOCKER_CONSTRAINTS=LabelRegex(`com.docker.compose.project`, `${COMPOSE_PROJECT_NAME}`)
+      - TRAEFIK_PROVIDERS_DOCKER_DEFAULTRULE=PathPrefix(`/{{ index .Labels "com.docker.compose.service" }}`)
+      - TRAEFIK_PROVIDERS_FILE_DIRECTORY=/config
+      - TRAEFIK_ENTRYPOINTS_WEBSECURE_ADDRESS=:9001
+      - TRAEFIK_ENTRYPOINTS_WEBSECURE_HTTP_TLS=true
+      - TRAEFIK_ENTRYPOINTS_WEBSECURE_HTTP_MIDDLEWARES=cors,auth
+      - TRAEFIK_ENTRYPOINTS_WEB_ADDRESS=:9000
+      - TRAEFIK_ENTRYPOINTS_WEB_HTTP_REDIRECTIONS_ENTRYPOINT_TO=websecure
+      - TRAEFIK_ENTRYPOINTS_ADMIN_ADDRESS=:9601
+      - TRAEFIK_ENTRYPOINTS_ADMIN_HTTP_MIDDLEWARES=cors
     volumes:
       - type: bind
         source: ./dev/traefik
@@ -105,16 +123,3 @@ services:
       - type: bind
         source: /var/run/docker.sock
         target: /var/run/docker.sock
-    command: >-
-      --api.dashboard=true
-      --providers.docker=true
-      --providers.docker.constraints="Label(`com.docker.compose.project`, `${COMPOSE_PROJECT_NAME}`)"
-      --providers.docker.defaultrule="PathPrefix(`/{{ index .Labels \"com.docker.compose.service\" }}`)"
-      --providers.file.directory=/config
-      --entrypoints.websecure.address=:9001
-      --entrypoints.websecure.http.tls=true
-      --entrypoints.websecure.http.middlewares=cors,auth
-      --entrypoints.web.address=:9000
-      --entrypoints.web.http.redirections.entrypoint.to=websecure
-      --entrypoints.admin.address=:9601
-      --entrypoints.admin.http.middlewares=cors
