--- a/package.json
+++ b/package.json
@@ -33,81 +33,81 @@
     "components": "vue-global-type-gen && echo 'export {};' >> src/auto-import.d.ts"
   },
   "dependencies": {
-    "@quasar/extras": "^1.10.11",
-    "axios": "^1.1.3",
+    "@quasar/extras": "^1.16.9",
+    "axios": "^1.6.5",
     "brewblox-proto": "https://github.com/brewblox/brewblox-proto#67da1ac7",
     "buffer": "^6.0.3",
     "cm6-theme-basic-dark": "^0.2.0",
-    "codemirror": "^6.0.0",
-    "core-js": "^3.16.3",
-    "d3": "^7.0.3",
-    "date-fns": "^2.29.1",
-    "dompurify": "^3.0.6",
-    "elkjs": "^0.8.1",
+    "codemirror": "^6.0.1",
+    "core-js": "^3.35.0",
+    "d3": "^7.8.5",
+    "date-fns": "^3.1.0",
+    "dompurify": "^3.0.8",
+    "elkjs": "^0.9.1",
     "fromentries": "^1.3.2",
     "immer": "^10.0.3",
-    "js-quantities": "^1.7.6",
+    "js-quantities": "^1.8.0",
     "lodash": "^4.17.21",
-    "marked": "^9.1.4",
-    "mqtt": "^5.1.4",
-    "nanoid": "^5.0.2",
-    "parse-duration": "^1.0.0",
+    "marked": "^11.1.1",
+    "mqtt": "^5.3.4",
+    "nanoid": "^5.0.4",
+    "parse-duration": "^1.1.0",
     "pinia": "^2.1.7",
-    "plotly.js": "^2.4.1",
-    "portal-vue": "^3.0.0-beta.0",
+    "plotly.js": "^2.28.0",
+    "portal-vue": "^3.0.0",
     "process": "^0.11.10",
-    "quasar": "^2.13.0",
-    "simple-keyboard": "^3.5.57",
-    "simple-keyboard-layouts": "^3.1.319",
-    "svg-path-properties": "^1.0.11",
+    "quasar": "^2.14.2",
+    "simple-keyboard": "^3.7.41",
+    "simple-keyboard-layouts": "^3.3.51",
+    "svg-path-properties": "^1.3.0",
     "typescript-string-enums": "^1.0.0",
-    "url": "^0.11.0",
-    "vue": "^3.3.7",
-    "vue-router": "^4.0.11",
+    "url": "^0.11.3",
+    "vue": "^3.4.6",
+    "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@quasar/quasar-app-extension-testing-unit-vitest": "^0.4.0",
-    "@quasar/vite-plugin": "^1.0.10",
-    "@rollup/plugin-inject": "^5.0.1",
-    "@types/d3": "^7.0.0",
-    "@types/dompurify": "^3.0.4",
-    "@types/js-quantities": "^1.6.2",
-    "@types/lodash": "^4.14.172",
+    "@quasar/vite-plugin": "^1.6.0",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@types/d3": "^7.4.3",
+    "@types/dompurify": "^3.0.5",
+    "@types/js-quantities": "^1.6.6",
+    "@types/lodash": "^4.14.202",
     "@types/marked": "^6.0.0",
-    "@types/minimist": "^1.2.2",
-    "@types/node": "20.8.10",
-    "@types/plotly.js": "^2.12.7",
-    "@types/pluralize": "^0.0.32",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "@vue/compiler-sfc": "^3.3.7",
+    "@types/minimist": "^1.2.5",
+    "@types/node": "20.10.7",
+    "@types/plotly.js": "^2.12.32",
+    "@types/pluralize": "^0.0.33",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vitest/coverage-v8": "^1.1.3",
+    "@vue/compiler-sfc": "^3.4.6",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "@vue/test-utils": "^2.4.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-quasar": "^1.1.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "jsdom": "^22.1.0",
-    "minimist": "^1.2.5",
-    "prettier": "^3.0.3",
-    "rollup": "^4.2.0",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "1.32.12",
-    "svgpath": "^2.3.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.1",
+    "eslint-plugin-vue": "^9.19.2",
+    "jsdom": "^23.2.0",
+    "minimist": "^1.2.8",
+    "prettier": "^3.1.1",
+    "rollup": "^4.9.4",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "1.69.7",
+    "svgpath": "^2.6.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vite-plugin-checker": "^0.6.2",
-    "vitest": "^0.34.6",
+    "vitest": "^1.1.3",
     "vue-global-type-gen": "^1.1.0",
-    "vue-tsc": "^1.8.22"
+    "vue-tsc": "^1.8.27"
   },
   "engines": {
     "node": ">= 18"
