--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "svg-path-properties": "^1.3.0",
     "typescript-string-enums": "^1.0.0",
     "url": "^0.11.3",
-    "vue": "^3.4.6",
+    "vue": "<3.4",
     "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
   },
