--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -19,21 +19,11 @@ services:
     labels:
       - traefik.http.routers.ui.rule=PathPrefix(`/ui`) || PathPrefix(`/static`) || Path(`/`)
 
-  # node-red:
-  #   volumes:
-  #     - type: bind
-  #       source: ./dev/node-red
-  #       target: /data
-  #     - type: bind
-  #       source: ../node-red-contrib-brewblox
-  #       target: /node-red-contrib-brewblox
-
   # history:
-  #   image: brewblox/brewblox-history:develop
   #   volumes:
   #     - type: bind
-  #       source: ../brewblox-history
-  #       target: /app
+  #       source: ../brewblox-history/brewblox_history
+  #       target: /app/brewblox_history
 
   # sparkey:
   #   volumes:
@@ -62,11 +52,11 @@ services:
   # tilt:
   #   volumes:
   #     - type: bind
-  #       source: ../brewblox-tilt
-  #       target: /app
+  #       source: ../brewblox-tilt/brewblox_tilt
+  #       target: /app/brewblox_tilt
   #       read_only: true
   #     - type: bind
-  #       source: ./dev/tilt_share
+  #       source: ${BREWBLOX_CACHE_DIR}/tilt
   #       target: /share
 
   # hass:
