--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 name: brewblox-ui
+
+networks:
+  default:
+    driver_opts:
+      com.docker.network.bridge.name: br-${COMPOSE_PROJECT_NAME}
+
 services:
   eventbus:
     image: ghcr.io/brewblox/mosquitto:develop
